tests/errmsgs/twrong_line_argument.nim
discard """
  errormsg: "a tuple value of the form '(string, int, int)' is expected, but got: '(\"\",)'"
  line: 6
"""

{.line: ("",).}:
  discard